third_party/move/move-compiler-v2/tests/ability-check/alive_since_borrowed.exp

Diagnostics:
error: local `x` of type `Impotent` does not have the `drop` ability
  ┌─ tests/ability-check/alive_since_borrowed.move:7:17
  │
7 │         let y = &x;
  │                 ^^ still borrowed but will be implicitly dropped later since it is no longer used

error: local `x` of type `S` does not have the `drop` ability
   ┌─ tests/ability-check/alive_since_borrowed.move:21:9
   │
21 │         x.g.h
   │         ^ still borrowed but will be implicitly dropped later since it is no longer used
